--- a/index.html
+++ b/index.html
@@ -7384,7 +7384,7 @@ flexibility(document.documentElement);
 										data-id="f7385b1" data-element_type="widget" data-widget_type="heading.default">
 										<div class="elementor-widget-container">
 											<h2 class="elementor-heading-title elementor-size-default">© Copyright 2023
-												The Web Planet. All Rights Reserved.</h2>
+												Syed Ismail. All Rights Reserved.</h2>
 										</div>
 									</div>
 								</div>
